# c_spirit_Merged

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  aim2_merged_backlog_ontology_IE.md  pyproject.toml
docs/: checklist.md  checklist_bk_August_4th_2-25.md  fix_checklist_format.py  plan.md
src/aim2/: __init__.py
src/aim2/cli/: ontology.py
src/aim2/common/: __init__.py  seed.py
src/aim2/data_synth/: __init__.py
src/aim2/ie/: __init__.py
src/aim2/infra/: __init__.py  config.py
src/aim2/ontology/: __init__.py  schema.py
tests/: test_config_system.py  test_fix_checkbox_format.py  test_lint_hooks.py  test_ontology_cli.py  test_ontology_roundtrip.py  test_plan_INF_001.md  test_plan_INF_002.md  test_plan_INF_003.md  test_plan_INF_004.md  test_plan_ON_010.md  test_repo_skeleton.py  test_task_runner.py  test_three_facet_schema.py
tests/fixtures/ontology/: minimal_schema.yaml
